--- a/ControleVenda/ControleVenda.csproj
+++ b/ControleVenda/ControleVenda.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ClipboardSetter\ClipboardSetter.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Infra\Infra.csproj" />
   </ItemGroup>
